@@ -68,27 +68,6 @@ qboolean	G_SpawnVector2DExt( const char *key, const char *defaultString, float *
 //
 // fields are needed for spawning from the entity string
 //
-typedef enum {
-	F_INT, 
-	F_FLOAT,
-	F_LSTRING,			// string on disk, pointer in memory, TAG_LEVEL
-	F_GSTRING,			// string on disk, pointer in memory, TAG_GAME
-	F_VECTOR,
-	F_ANGLEHACK,
-	F_ENTITY,			// index on disk, pointer in memory
-	F_ITEM,				// index on disk, pointer in memory
-	F_CLIENT,			// index on disk, pointer in memory
-	F_IGNORE
-} fieldtype_t;
-
-typedef struct
-{
-	char	*name;
-	int		ofs;
-	fieldtype_t	type;
-	int		flags;
-} field_t;
-
 field_t fields[] = {
 	{"classname",	FOFS(classname),	F_LSTRING},
 	{"origin",		FOFS(s.origin),		F_VECTOR},
